--- a/week_04/relational_db/slides.Rmd
+++ b/week_04/relational_db/slides.Rmd
@@ -106,6 +106,86 @@ DROP TABLE [IF EXISTS] [schema_name.]table_name;
 
 ## Update data
 
-insert, delete, update
+There are three ways to manipulate date - **insert**, **update**, and **delete**.
+
+```sql
+INSERT INTO 
+  table1 (column1, column2, ...)
+VALUES
+  (value1, value2, ...),
+  (value1, value2, ...),
+        ...
+  (value1, value2, ...);
+```
+
+```sql
+UPDATE table
+SET column_1 = new_value_1,
+    column_2 = new_value_2
+WHERE
+    search_condition;
+```
+
+```sql
+DELETE
+FROM
+ table
+WHERE
+ search_condition;
+```
+
+## Duh
+
+Obviously this is not the way most tables are filled (manually). There is usually a go-between the data and the database that adds the data. This is called ETL (Extract-Transform-Load). 
+
+We can do ETL from a "raw" database full of dumped .csv files intro a "production" database using queries. Or, we can use DBMS that is more robust and has ETL capabilities. 
+
+```sql
+INSERT INTO table_name
+select_statement;
+```
 
 ## Views
+
+A **view** is a result set of a stored query, allows you to store a query as a named object. If data in the database changes, the view updates as well (because the stored query is rerun every time you access a view).
+
+A view is useful because it provides an abstraction layer over tables. You can add and remove columns in the view without touching the schema of the underlying tables. Also, you can use views to encapsulate complex queries with joins to simplify the data access.
+
+```sql
+CREATE [TEMP] VIEW [IF NOT EXISTS] view_name(column-name-list) AS select-statement;
+```
+
+```sql
+SELECT * FROM view_name;
+```
+
+```sql
+DROP VIEW [IF EXISTS] view_name;
+```
+
+## Your turn { .cover .white }
+
+<!-- image source https://www.flickr.com/photos/ollemhebb/16691684354/in/photolist-rqZfeh-dB2HGy-j4rtWV-cswQCb-bnmKUX-rurYD7-5vmdw6-7iHPtj-bvggjZ-7nwAyK-oVZdhD-acwkds-dqAf8f-e4z5Jk-6PBenY-dSAYZ9-5vmcGR-e4z7be-cyGrpE-7WLPaw-5vmdnn-8ciEWU-5vmcDa-o2NbGq-dxpJTW-cyGt4d-dZy9Sm-dZssjK-oVZ3SB-5BtrCp-e4z5Mk-6bvjNs-8cfk5H-dzTiW2-7Yfj3T-9mraHV-5XmJTS-aDtnzj-ruXg4M-ecF3x2-aAU6Fg-bsQosb-Hgh9UM-kJti5g-ifdCE4-ceXXhf-7AdkFZ-aEDYpr-otaizi-sa1Phn -->
+<img src="images/your_turn.jpg" class="cover height" />
+
+<p style="color: white">
+Create a new database for recipes. Think about your favorite food. What ingredients go into this food? How do you cook it?
+</p>
+<ol style="color: white">
+<li>Create a table that stores information about `ingredients`. (What does a person need to know about ingredients?)</li>
+<li>Create a table that stores information about `measurement`.</li>
+<li>Create a table that stores information about cooking `practices` (maybe name and instructions)</li>
+<li>Fill in data about your favorite food for ingredients, measurements, and practices</li>
+</ol>
+
+## Your turn (cont'd){ .cover .white }
+
+<!-- image source https://www.flickr.com/photos/ollemhebb/16691684354/in/photolist-rqZfeh-dB2HGy-j4rtWV-cswQCb-bnmKUX-rurYD7-5vmdw6-7iHPtj-bvggjZ-7nwAyK-oVZdhD-acwkds-dqAf8f-e4z5Jk-6PBenY-dSAYZ9-5vmcGR-e4z7be-cyGrpE-7WLPaw-5vmdnn-8ciEWU-5vmcDa-o2NbGq-dxpJTW-cyGt4d-dZy9Sm-dZssjK-oVZ3SB-5BtrCp-e4z5Mk-6bvjNs-8cfk5H-dzTiW2-7Yfj3T-9mraHV-5XmJTS-aDtnzj-ruXg4M-ecF3x2-aAU6Fg-bsQosb-Hgh9UM-kJti5g-ifdCE4-ceXXhf-7AdkFZ-aEDYpr-otaizi-sa1Phn -->
+<img src="images/your_turn.jpg" class="cover height" />
+
+
+<ol style="color: white">
+<li>Create a table called `recipe` with the columns `step`, `do`, `need`, that encodes what you **do** at each **step** in a recipe and what you **need** to do it (ingredients).</li>
+<li>Fill your `recipe` table with your favorite recipe (using foreign keys)</li>
+<li>Create a view called `recipe_read` that you joins the information so that you can actually perform a selected recipe.</li>
+</ol>
