--- a/week_06/slides.Rmd
+++ b/week_06/slides.Rmd
@@ -52,9 +52,54 @@ You seem to be falling prey to a common misconception that "R" is some monolithi
 ## Anyone is allowed to make an R package  
 * There are 7,801 R packages available on CRAN (Comprehensive R Archive Network)  
 * Whatever you are doing, some one has probably made an R package that can help you  
-* 
+* Packages from CRAN are very well-documented, although sometimes it is tough to get through the jargon  
+* It is often useful to use two forms of documentation
 
-## Spencer Graves: 'The sun never sets on the (former) British Empire.' Today, it never sets on R-Help.  
+## Some examples  
+  * [nlme](https://cran.r-project.org/web/packages/nlme/nlme.pdf) (more stats) 
+  * [agricolae](https://cran.r-project.org/web/packages/agricolae/agricolae.pdf)  (stats for agronomy)  
+  * [soilR](https://cran.r-project.org/web/packages/SoilR/SoilR.pdf) (soil carbon modeling)  
+  * [meteo](https://cran.r-project.org/web/packages/meteo/meteo.pdf) (spatial modeling)  
+  * [apsimR](https://cran.r-project.org/web/packages/apsimr/index.html) (run another program from R)  
+  * [tidyr](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html)
+  Many packages are not on CRAN --  e.g. [metagenomeSeq](http://cbcb.umd.edu/software/metagenomeSeq)  
+
+## Whenever you think something can't be done in R, a new package seems to come out.  
+
+<center><img src="images/cant-do.gif" width="450px"/></center>  
+
+R can probaby do anything, but it doesn't mean it's always the best (or fastest) at everything.  
+
+# How are we expected to keep up with all these packages?
+
+## Follow the R community  
+* [Twitter](https://twitter.com/search?q=%23rstats&src=typd), even if you join for this reason  #rstats  
+* [R weekly](https://rweekly.org/)  
+* [R Bloggers](https://www.r-bloggers.com/)  
+* UseR Conference if you really get into it  
+
+## Find R users in your own discipline, at your own conferences  
+* Sometimes there are R meetings before the conference begins  
+* Keep an eye out for figures made in ggplot2, read poster methods sections  
+
+## Search and ask a lot of questions  
+* Google  
+* [Stackoverflow](http://stackoverflow.com/)  
+* [R-Help](http://r.789695.n4.nabble.com/) is also out there, but I don't use it  
+* Talk to people face-to-face, more than just one person  
+* Join/start an R group  
+
+# Before you know it, you will *be* the R community  
+
+## The remainder of the semester will be learning how to do things in R  
+* Basics  
+* Data wrangling  
+* Data visualization  
+* Scraping data from the web  
+* Let us know of specific needs/interests  
+
+
+
 
 
 
