--- a/week_06/slides.Rmd
+++ b/week_06/slides.Rmd
@@ -43,7 +43,7 @@ output:
 
 ## Beyond base
 
-You seem to be falling prey to a common misconception that "R" is some monolithic tool, when in fact it is a herd of cats.
+You seem to be falling prey to a common misconception that "R" is some monolithic tool, when in fact it is a herd of cats.  
    -- Jeff Newmiller (in response to a user who did not look for packages)
       R-help (December 2013)  
 
@@ -61,7 +61,8 @@ You seem to be falling prey to a common misconception that "R" is some monolithi
   * [soilR](https://cran.r-project.org/web/packages/SoilR/SoilR.pdf) (soil carbon modeling)  
   * [meteo](https://cran.r-project.org/web/packages/meteo/meteo.pdf) (spatial modeling)  
   * [apsimR](https://cran.r-project.org/web/packages/apsimr/index.html) (run another program from R)  
-  * [tidyr](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html)
+  * [tidyr](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html)  
+  * [knitr](https://cran.r-project.org/web/packages/knitr/index.html)  
   Many packages are not on CRAN --  e.g. [metagenomeSeq](http://cbcb.umd.edu/software/metagenomeSeq)  
 
 ## Whenever you think something can't be done in R, a new package seems to come out.  
