--- a/week_07/dataframes/slides.Rmd
+++ b/week_07/dataframes/slides.Rmd
@@ -8,27 +8,8 @@ output:
     katex: true
     theme: ribbon
 ---
-create data from scratch
-importing data (read.csv), 
-add a column
-remove rows
-subset data  
-fit model  
-pull out stuff from model  
 
-Advanced R Book [[]]  
-
-df$ET[df$ET < 0 | df$ET > 10] <- 0  
-%in%, ?'%in%' match - defines the intersections of two sets
-| or
-& and  
-na.rm  
-
-
-
-## Dataframes
-
-![](images/pumpkin_spice.jpg) 
+# Dataframes
 
 ## DIY Dataframe
 
@@ -65,8 +46,6 @@ Import your file
 `df<-read.table("file.txt", header = TRUE)`  
 For Excel files, look in to the `readxl` package  
 
-#Let's do it  
-
 ## Subsetting  
 
 **%in%** (?'%in%') (use quotes when looking up weird stuff)
@@ -88,11 +67,7 @@ otherwise `&` means "and"
 * `[[]]` gives you the content of the list  
 * This difference will become more important when we get into functions
 
-
-
-
-
-
+#Let's import and subset  
 
 
 
@@ -101,30 +76,10 @@ otherwise `&` means "and"
 <!-- image source https://www.flickr.com/photos/ollemhebb/16691684354/in/photolist-rqZfeh-dB2HGy-j4rtWV-cswQCb-bnmKUX-rurYD7-5vmdw6-7iHPtj-bvggjZ-7nwAyK-oVZdhD-acwkds-dqAf8f-e4z5Jk-6PBenY-dSAYZ9-5vmcGR-e4z7be-cyGrpE-7WLPaw-5vmdnn-8ciEWU-5vmcDa-o2NbGq-dxpJTW-cyGt4d-dZy9Sm-dZssjK-oVZ3SB-5BtrCp-e4z5Mk-6bvjNs-8cfk5H-dzTiW2-7Yfj3T-9mraHV-5XmJTS-aDtnzj-ruXg4M-ecF3x2-aAU6Fg-bsQosb-Hgh9UM-kJti5g-ifdCE4-ceXXhf-7AdkFZ-aEDYpr-otaizi-sa1Phn -->
 <img src="images/your_turn.jpg" class="cover height" />
 
-<p>
-<a style="color:black" href="https://cran.r-project.org/doc/contrib/Short-refcard.pdf" target="_blank">helpful functions</a>
-</p>
 
-<ol style="color:white">
-<li>Use the `rep` function to create and store a vector containing 111222333444555</li>
-<li>Use the `rep` function to create and store a vector containing 123451234512345</li>
-<li>What is the third power of each integer from 1 to 50?</li>
+<ol style="color:black">
+<li>Use the NASS data to determine the relationship between time and change in bu/acre of corn </li>
+<li>Examine the same relationship, but split into 1940-1990 and 1991-2015 and compare the slopes of the linear models </li>
+<li>Compare "acres harvested" of small grains (oats, barley, wheat, and rye) to "acres harvested" of corn and soybean over the last 100 years.</li>
 </ol>
-
-
-## Modifying data
-
-We can use indexing to change values of data. Or add columns to a data frame.
-
-```{r}
-#using indexing to change certain values
-hp_per_cyl <- mtcars$hp/mtcars$cyl
-hp_per_cyl[1] <- NA
-hp_per_cyl[2] <- "???"
-hp_per_cyl[1:10]
-
-#add column
-mtcars$hp_per_cyl <- hp_per_cyl
-head(mtcars, 1)
-```
 
