--- a/week_07/dataframes/slides.Rmd
+++ b/week_07/dataframes/slides.Rmd
@@ -51,7 +51,7 @@ For Excel files, look in to the `readxl` package
 
 **%in%** (?'%in%') (use quotes when looking up weird stuff)
 
-* match - defines the intersections of two sets  
+* match  
 * use instead of `==` when you have more than one    
 * `df[df$year %in% c(2008, 2009, 2010),]`   
 
